# convex-hull

./: .gitignore  CMakeLists.txt  LICENSE  README.md  readme.txt
convex-hull/lib/: algorithms.hpp  chull.hpp  edge.hpp  face.hpp  generator.hpp  inputHandler.hpp  point.hpp  preprocessing.hpp  stopwatch.hpp  test.hpp
convex-hull/resources/: sample.txt  sampleSphere.txt
convex-hull/src/: algorithms.cpp  chull.cpp  edge.cpp  face.cpp  generator.cpp  inputHandler.cpp  main.cpp  point.cpp  preprocessing.cpp  preprocessing.hpp  stopwatch.cpp
convex-hull/tests/: test.cpp
convex-hull/times/: giftWrapping.data  incremental.data  naive.data  times.data
convex-hull/visuals/: faces.data  facets.data  plot.py  points.data  vertices.data
hdr/: face.hpp  generator.hpp  point.hpp  test.hpp
src/: edge.cpp  face.cpp  generator.cpp  main.cpp  point.cpp  test.cpp
